# django-admin-smoke

./: .travis.yml  README.md  mypy.ini  pyproject.toml  requirements.txt  requires.txt  setup.py  tox.ini
.github/workflows/: build.yml  codecov.yml  mypy.yml  pythonpublish.yml
admin_smoke/: tests.py
src/admin_smoke/: tests.py
testproject/: settings.py
testproject/testapp/: admin.py  models.py  tests.py
testproject/testapp/migrations/: 0001_initial.py
tests/testproject/: settings.py
tests/testproject/testapp/: admin.py  models.py  tests.py
tests/testproject/testapp/migrations/: 0001_initial.py  0002_project_created.py  0002_project_developers.py
